# flutter_pjsip

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  melos.yaml  pubspec.yaml
.github/: dependabot.yml
.github/actions/: build.yaml
.github/actions/build-all/: action.yaml
.github/actions/get-flutter/: action.yaml
.github/workflows/: build-and-publish.yaml  build-and-test.yaml  build.yaml  get-flutter.yaml  version-bump.yaml
android/src/main/: AndroidManifest.xml
example/: pubspec.yaml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/nope/flutter_pjsip/flutter_pjsip_example/: MainActivity.kt
example/ios/Runner/: Info.plist
scripts/: build-android.sh  build-ios.sh  build-macos.sh  clean-working-tree.sh  clean.sh  create-lib-archive.sh  gen-ffi-bindings.sh  get-pjsip.sh  post-publish.sh  pre-publish.sh
src/: CMakeLists.txt  flutter_pjsip.c
